@@ -8,7 +8,6 @@ import com.terraboxstudios.nanopay.wallet.WalletGsonAdapter;
 import uk.oczadly.karl.jnano.model.NanoAccount;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.Duration;
@@ -18,8 +17,6 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-
-import static java.nio.charset.StandardCharsets.UTF_8;
 
 /**
  * All operations have a O(1) time complexity apart from {@link MultipleFileWalletStorage#getAllWallets} which is O(n)
@@ -62,8 +59,7 @@ public class MultipleFileWalletStorage implements WalletStorage {
                     .filter(file -> NanoAccount.isValidNano(file.getFileName().toString()))
                     .map(walletPath -> {
                         try {
-                            String json = new String(Files.readAllBytes(walletPath), UTF_8);
-                            return gson.fromJson(json, Wallet.class);
+                            return gson.fromJson(Files.readString(walletPath), Wallet.class);
                         } catch (IOException e) {
                             NanoPay.LOGGER.error("Could not open wallet file '" + walletPath + "'", e);
                         }
@@ -81,8 +77,7 @@ public class MultipleFileWalletStorage implements WalletStorage {
         Path walletPath = storageFolder.resolve(address);
         if (!Files.exists(walletPath)) return Optional.empty();
         try {
-            String json = new String(Files.readAllBytes(walletPath), StandardCharsets.UTF_8);
-            return Optional.of(gson.fromJson(json, Wallet.class));
+            return Optional.of(gson.fromJson(Files.readString(walletPath), Wallet.class));
         } catch (IOException e) {
             return Optional.empty();
         }
@@ -90,9 +85,9 @@ public class MultipleFileWalletStorage implements WalletStorage {
 
     @Override
     public void saveWallet(Wallet wallet) {
-        Path walletPath = storageFolder.resolve(wallet.getAddress());
+        Path walletPath = storageFolder.resolve(wallet.address());
         try {
-            Files.write(walletPath, gson.toJson(wallet, Wallet.class).getBytes(UTF_8));
+            Files.writeString(walletPath, gson.toJson(wallet, Wallet.class));
         } catch (IOException e) {
             NanoPay.LOGGER.error("Could not save wallet file in wallet storage folder", e);
         }
@@ -100,14 +95,14 @@ public class MultipleFileWalletStorage implements WalletStorage {
 
     @Override
     public void deleteWallet(Wallet wallet) {
-        Path walletPath = storageFolder.resolve(wallet.getAddress());
+        Path walletPath = storageFolder.resolve(wallet.address());
         if (!Files.exists(walletPath)) {
-            NanoPay.LOGGER.warn("Received request to delete wallet file that doesn't exist from wallet storage ('" + wallet.getAddress() + "')");
+            NanoPay.LOGGER.warn("Received request to delete wallet file that doesn't exist from wallet storage ('" + wallet.address() + "')");
         } else {
             try {
                 Files.deleteIfExists(walletPath);
             } catch (IOException e) {
-                NanoPay.LOGGER.error("IO exception occurred deleting wallet file from wallet storage ('" + wallet.getAddress() + "')");
+                NanoPay.LOGGER.error("IO exception occurred deleting wallet file from wallet storage ('" + wallet.address() + "')");
             }
         }
     }
